// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompareContainer should match the snapshot if comparisonData has only 1 object 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CompareContainer
    comparisonData={
        Object {
            "school1": Object {
              "data": Object {
                "2004": 0.24,
                "2005": 0.278,
                "2006": 0.337,
                "2007": 0.395,
                "2008": 0.536,
                "2009": 0.598,
                "2010": 0.64,
                "2011": 0.672,
                "2012": 0.695,
                "2013": 0.703,
                "2014": 0.741,
              },
              "dataType": "Percent",
              "location": "COLORADO",
            },
          }
    }
    handleCompareCards={[Function]}
    removeComparison={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <CompareInstructions
        comparisonData={
                Object {
                        "school1": Object {
                          "data": Object {
                            "2004": 0.24,
                            "2005": 0.278,
                            "2006": 0.337,
                            "2007": 0.395,
                            "2008": 0.536,
                            "2009": 0.598,
                            "2010": 0.64,
                            "2011": 0.672,
                            "2012": 0.695,
                            "2013": 0.703,
                            "2014": 0.741,
                          },
                          "dataType": "Percent",
                          "location": "COLORADO",
                        },
                      }
        }
        handleCompareCards={[Function]}
        removeComparison={[Function]}
/>,
      "className": "CompareContainer",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "comparisonData": Object {
          "school1": Object {
            "data": Object {
              "2004": 0.24,
              "2005": 0.278,
              "2006": 0.337,
              "2007": 0.395,
              "2008": 0.536,
              "2009": 0.598,
              "2010": 0.64,
              "2011": 0.672,
              "2012": 0.695,
              "2013": 0.703,
              "2014": 0.741,
            },
            "dataType": "Percent",
            "location": "COLORADO",
          },
        },
        "handleCompareCards": [Function],
        "removeComparison": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <CompareInstructions
          comparisonData={
                    Object {
                              "school1": Object {
                                "data": Object {
                                  "2004": 0.24,
                                  "2005": 0.278,
                                  "2006": 0.337,
                                  "2007": 0.395,
                                  "2008": 0.536,
                                  "2009": 0.598,
                                  "2010": 0.64,
                                  "2011": 0.672,
                                  "2012": 0.695,
                                  "2013": 0.703,
                                  "2014": 0.741,
                                },
                                "dataType": "Percent",
                                "location": "COLORADO",
                              },
                            }
          }
          handleCompareCards={[Function]}
          removeComparison={[Function]}
/>,
        "className": "CompareContainer",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "comparisonData": Object {
            "school1": Object {
              "data": Object {
                "2004": 0.24,
                "2005": 0.278,
                "2006": 0.337,
                "2007": 0.395,
                "2008": 0.536,
                "2009": 0.598,
                "2010": 0.64,
                "2011": 0.672,
                "2012": 0.695,
                "2013": 0.703,
                "2014": 0.741,
              },
              "dataType": "Percent",
              "location": "COLORADO",
            },
          },
          "handleCompareCards": [Function],
          "removeComparison": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CompareContainer should match the snapshot if it is given an empty object 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CompareContainer
    comparisonData={Object {}}
    handleCompareCards={[Function]}
    removeComparison={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": undefined,
      "className": "CompareContainer",
    },
    "ref": null,
    "rendered": null,
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "CompareContainer",
      },
      "ref": null,
      "rendered": null,
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CompareContainer should match the snapshot when it is given a full comparison 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CompareContainer
    comparisonData={
        Object {
            "comparison": Object {
              "COLORADO": 0.53,
              "YUMA SCHOOL DISTRICT 1": 0.909,
              "compared": 0.583,
            },
            "school1": Object {
              "data": Object {
                "2004": 0.24,
                "2005": 0.278,
                "2006": 0.337,
                "2007": 0.395,
                "2008": 0.536,
                "2009": 0.598,
                "2010": 0.64,
                "2011": 0.672,
                "2012": 0.695,
                "2013": 0.703,
                "2014": 0.741,
              },
              "dataType": "Percent",
              "location": "COLORADO",
            },
            "school2": Object {
              "data": Object {
                "2004": 0,
                "2005": 1,
                "2006": 1,
                "2007": 1,
                "2008": 1,
                "2009": 1,
                "2010": 1,
                "2011": 1,
                "2012": 1,
                "2013": 1,
                "2014": 1,
              },
              "dataType": "Percent",
              "location": "YUMA SCHOOL DISTRICT 1",
            },
          }
    }
    handleCompareCards={[Function]}
    removeComparison={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Comparison
        comparisonData={
                Object {
                        "comparison": Object {
                          "COLORADO": 0.53,
                          "YUMA SCHOOL DISTRICT 1": 0.909,
                          "compared": 0.583,
                        },
                        "school1": Object {
                          "data": Object {
                            "2004": 0.24,
                            "2005": 0.278,
                            "2006": 0.337,
                            "2007": 0.395,
                            "2008": 0.536,
                            "2009": 0.598,
                            "2010": 0.64,
                            "2011": 0.672,
                            "2012": 0.695,
                            "2013": 0.703,
                            "2014": 0.741,
                          },
                          "dataType": "Percent",
                          "location": "COLORADO",
                        },
                        "school2": Object {
                          "data": Object {
                            "2004": 0,
                            "2005": 1,
                            "2006": 1,
                            "2007": 1,
                            "2008": 1,
                            "2009": 1,
                            "2010": 1,
                            "2011": 1,
                            "2012": 1,
                            "2013": 1,
                            "2014": 1,
                          },
                          "dataType": "Percent",
                          "location": "YUMA SCHOOL DISTRICT 1",
                        },
                      }
        }
        handleCompareCards={[Function]}
        removeComparison={[Function]}
/>,
      "className": "CompareContainer",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "comparisonData": Object {
          "comparison": Object {
            "COLORADO": 0.53,
            "YUMA SCHOOL DISTRICT 1": 0.909,
            "compared": 0.583,
          },
          "school1": Object {
            "data": Object {
              "2004": 0.24,
              "2005": 0.278,
              "2006": 0.337,
              "2007": 0.395,
              "2008": 0.536,
              "2009": 0.598,
              "2010": 0.64,
              "2011": 0.672,
              "2012": 0.695,
              "2013": 0.703,
              "2014": 0.741,
            },
            "dataType": "Percent",
            "location": "COLORADO",
          },
          "school2": Object {
            "data": Object {
              "2004": 0,
              "2005": 1,
              "2006": 1,
              "2007": 1,
              "2008": 1,
              "2009": 1,
              "2010": 1,
              "2011": 1,
              "2012": 1,
              "2013": 1,
              "2014": 1,
            },
            "dataType": "Percent",
            "location": "YUMA SCHOOL DISTRICT 1",
          },
        },
        "handleCompareCards": [Function],
        "removeComparison": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Comparison
          comparisonData={
                    Object {
                              "comparison": Object {
                                "COLORADO": 0.53,
                                "YUMA SCHOOL DISTRICT 1": 0.909,
                                "compared": 0.583,
                              },
                              "school1": Object {
                                "data": Object {
                                  "2004": 0.24,
                                  "2005": 0.278,
                                  "2006": 0.337,
                                  "2007": 0.395,
                                  "2008": 0.536,
                                  "2009": 0.598,
                                  "2010": 0.64,
                                  "2011": 0.672,
                                  "2012": 0.695,
                                  "2013": 0.703,
                                  "2014": 0.741,
                                },
                                "dataType": "Percent",
                                "location": "COLORADO",
                              },
                              "school2": Object {
                                "data": Object {
                                  "2004": 0,
                                  "2005": 1,
                                  "2006": 1,
                                  "2007": 1,
                                  "2008": 1,
                                  "2009": 1,
                                  "2010": 1,
                                  "2011": 1,
                                  "2012": 1,
                                  "2013": 1,
                                  "2014": 1,
                                },
                                "dataType": "Percent",
                                "location": "YUMA SCHOOL DISTRICT 1",
                              },
                            }
          }
          handleCompareCards={[Function]}
          removeComparison={[Function]}
/>,
        "className": "CompareContainer",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "comparisonData": Object {
            "comparison": Object {
              "COLORADO": 0.53,
              "YUMA SCHOOL DISTRICT 1": 0.909,
              "compared": 0.583,
            },
            "school1": Object {
              "data": Object {
                "2004": 0.24,
                "2005": 0.278,
                "2006": 0.337,
                "2007": 0.395,
                "2008": 0.536,
                "2009": 0.598,
                "2010": 0.64,
                "2011": 0.672,
                "2012": 0.695,
                "2013": 0.703,
                "2014": 0.741,
              },
              "dataType": "Percent",
              "location": "COLORADO",
            },
            "school2": Object {
              "data": Object {
                "2004": 0,
                "2005": 1,
                "2006": 1,
                "2007": 1,
                "2008": 1,
                "2009": 1,
                "2010": 1,
                "2011": 1,
                "2012": 1,
                "2013": 1,
                "2014": 1,
              },
              "dataType": "Percent",
              "location": "YUMA SCHOOL DISTRICT 1",
            },
          },
          "handleCompareCards": [Function],
          "removeComparison": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
